--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "terser": "^5.43.1",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.35.1",
-        "vite": "^7.0.3"
+        "vite": "^7.0.3",
+        "vite-plugin-svgr": "^4.3.0"
     }
 }
