--- a/package.json
+++ b/package.json
@@ -20,24 +20,28 @@
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
         "@gorhom/bottom-sheet": "^5.1.8",
+        "@headlessui/react": "^2.2.7",
         "@lexical/html": "^0.33.0",
         "@lexical/react": "^0.33.1",
         "@mui/icons-material": "^7.2.0",
         "@mui/material": "^7.2.0",
         "@tailwindcss/vite": "^4.1.11",
         "clsx": "^2.1.1",
+        "headlessui": "^0.0.0",
         "lexical": "^0.33.1",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-icons": "^5.5.0",
         "react-modal-sheet": "^4.4.0",
         "react-router-dom": "^7.7.0",
-        "tailwindcss": "^4.1.11"
+        "tailwindcss": "^4.1.11",
+        "url-regex-safe": "^4.0.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
+        "@types/url-regex-safe": "^1.0.2",
         "@vitejs/plugin-react": "^4.6.0",
         "eslint": "^9.30.1",
         "eslint-plugin-react-hooks": "^5.2.0",
